# modern-cmake-template

./: CMakeLists.txt  README.MD
src/: CMakeLists.txt  README.MD  main.cpp
src/core/: CMakeLists.txt  README.MD  some_class.cpp  some_class.h
tests/: CMakeLists.txt  README.MD  test_main.cpp  test_some_class.cpp
